--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_blue">#06004F</color>
+    <color name="light_blue">#4C06004F</color>
+    <color name="pale_blue">#99004182</color>
 </resources>
