--- a/app/src/main/res/drawable/ic_outlined_heart.xml
+++ b/app/src/main/res/drawable/ic_outlined_heart.xml
@@ -1,16 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="50dp"
-    android:height="50dp"
-    android:viewportWidth="50"
-    android:viewportHeight="50">
-  <path
-      android:pathData="M25,20m-15,0a15,15 0,1 1,30 0a15,15 0,1 1,-30 0"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M28.739,15.053C29.805,15.393 30.562,16.35 30.656,17.475M24.761,28.854C22.59,27.518 20.571,25.946 18.739,24.165C17.451,22.883 16.471,21.32 15.873,19.595C14.797,16.25 16.054,12.421 19.571,11.288C21.42,10.692 23.438,11.033 24.996,12.201C26.554,11.034 28.573,10.694 30.421,11.288C33.938,12.421 35.204,16.25 34.128,19.595C33.53,21.32 32.55,22.883 31.262,24.165C29.43,25.946 27.411,27.518 25.24,28.854L25.005,29L24.761,28.854Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#004182"
-      android:strokeLineCap="round"/>
+    android:width="30dp"
+    android:height="30dp"
+    android:viewportWidth="30"
+    android:viewportHeight="30">
+  <group>
+    <clip-path
+        android:pathData="M0,0h30v30h-30z"/>
+    <path
+        android:pathData="M15,15m-15,0a15,15 0,1 1,30 0a15,15 0,1 1,-30 0"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M18.739,10.053C19.805,10.393 20.562,11.35 20.656,12.475M14.761,23.854C12.59,22.518 10.571,20.946 8.739,19.165C7.451,17.883 6.471,16.32 5.873,14.595C4.797,11.25 6.054,7.421 9.571,6.288C11.42,5.692 13.438,6.033 14.996,7.201C16.554,6.034 18.573,5.694 20.421,6.288C23.938,7.421 25.204,11.25 24.128,14.595C23.53,16.32 22.55,17.883 21.262,19.165C19.43,20.946 17.411,22.518 15.24,23.854L15.005,24L14.761,23.854Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="1.5"
+        android:fillColor="#00000000"
+        android:strokeColor="#004182"
+        android:strokeLineCap="round"/>
+  </group>
 </vector>
