--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -49,16 +49,14 @@
                 app:layout_constraintTop_toBottomOf="@id/product_img"
                 tools:text="Nike Air Jordon" />
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/add_to_wishlist_btn"
+            <com.google.android.material.card.MaterialCardView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:padding="20dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="20dp"
-                app:cardElevation="0dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:cardCornerRadius="50dp"
+                app:cardElevation="15dp"
+                app:strokeWidth="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -66,19 +64,19 @@
                     android:id="@+id/wishlist_icon"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="2dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginEnd="2dp"
-                    android:layout_marginBottom="2dp"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/ic_outlined_heart" />
-            </androidx.cardview.widget.CardView>
+
+            </com.google.android.material.card.MaterialCardView>
+
 
             <TextView
-                android:id="@+id/product_price"
+                android:id="@+id/product_price_after_discount"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppins_regular"
+                android:text="@{@string/formatted_price(product.priceAfterDiscount, product.priceAfterDiscount)}"
                 android:textColor="@color/dark_blue"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="@id/product_name"
@@ -86,16 +84,17 @@
                 tools:text="EGP1,200" />
 
             <TextView
-                android:id="@+id/product_old_price"
+                android:id="@+id/product_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/poppins_regular"
+                android:text="@{@string/formatted_price(product.price, product.price)}"
                 android:textColor="@color/pale_blue"
                 android:textSize="11sp"
-                app:layout_constraintBottom_toBottomOf="@id/product_price"
-                app:layout_constraintStart_toEndOf="@id/product_price"
-                app:layout_constraintTop_toTopOf="@id/product_price"
+                app:layout_constraintBottom_toBottomOf="@id/product_price_after_discount"
+                app:layout_constraintStart_toEndOf="@id/product_price_after_discount"
+                app:layout_constraintTop_toTopOf="@id/product_price_after_discount"
                 tools:text="EGP 1,500" />
 
             <TextView
@@ -107,28 +106,29 @@
                 android:text="@string/review_label"
                 android:textColor="@color/dark_blue"
                 android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="@id/product_price"
-                app:layout_constraintTop_toBottomOf="@id/product_price" />
+                app:layout_constraintStart_toStartOf="@id/product_price_after_discount"
+                app:layout_constraintTop_toBottomOf="@id/product_price_after_discount" />
 
             <TextView
                 android:id="@+id/review_value_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppins_regular"
+                android:text="@{@string/reviews_average(product.reviewsAverage, product.reviewsAverage)}"
                 android:textColor="@color/dark_blue"
                 android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="@id/review_tv"
                 app:layout_constraintStart_toEndOf="@id/review_tv"
-                app:layout_constraintTop_toBottomOf="@id/product_price"
+                app:layout_constraintTop_toTopOf="@id/review_tv"
                 tools:text="(4.5)" />
 
             <ImageView
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 android:layout_marginStart="5dp"
-                android:paddingTop="3dp"
                 android:src="@drawable/ic_star"
+                app:layout_constraintBottom_toBottomOf="@id/review_value_tv"
                 app:layout_constraintStart_toEndOf="@id/review_value_tv"
                 app:layout_constraintTop_toTopOf="@id/review_value_tv" />
 
